# kernel-gossip

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  CONTEXT_SUMMARY.md  Cargo.toml  DEMO_TEST_RUN.md  Dockerfile  Dockerfile.bpftrace  Dockerfile.kernel-observer-bpftrace  Dockerfile.kernel-observer-ebpf  Dockerfile.kernel-observer-ebpf-gcb  Dockerfile.kernel-observer-simple  EXECUTION_PLAN.md  RCA-PID-RESOLUTION.md  RCA-PLAN.md  README.md  TALK-SCRIPT.md  TALK_OUTLINE.md  TALK_PLAN.md  TALK_SCRIPT.md  TECHNICAL_STATE.md  build-and-push.sh  build-ebpf-on-cluster.sh  cloudbuild-ebpf.yaml  cloudbuild.yaml  ddosify-load.yaml  debug-tracepoints.bt  demo-automatic.sh  demo-birth-certificate.sh  demo-kernel-cascade.sh  demo-live.sh  demo.sh  demo1-pod-birth.sh  demo2-cpu-throttle.sh  deploy.sh  gke-cluster-setup.sh  test-nginx.yaml
.claud-code/: daily-routine.md  quality-gates.md  rules.md
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
ci/: claude.md
ci/cloudbuild/: claude.md
crates/: claude.md
crates/ebpf-monitor/: Dockerfile
crates/kernel-gossip-e2e/: Cargo.toml  claude.md
crates/kernel-gossip-e2e/src/: claude.md  environment.rs  lib.rs  workload.rs
crates/kernel-gossip-e2e/tests/: claude.md  e2e_cpu_throttle_test.rs  e2e_memory_pressure_test.rs  e2e_network_issue_test.rs  e2e_pod_creation_test.rs
crates/kernel-gossip-operator/: Cargo.toml  Dockerfile.arm64  Dockerfile.multiarch  claude.md
crates/kernel-gossip-operator/src/: claude.md  config.rs  lib.rs  main.rs  pod_watcher.rs  server.rs
crates/kernel-gossip-operator/src/actions/: claude.md  mod.rs
crates/kernel-gossip-operator/src/crd/: claude.md  mod.rs
crates/kernel-gossip-operator/src/decision/: claude.md
crates/kernel-gossip-operator/src/ebpf/: mod.rs
crates/kernel-gossip-operator/src/recommendation/: mod.rs
crates/kernel-gossip-operator/src/webhook/: claude.md  mod.rs
crates/kernel-gossip-operator/tests/: actions_unit_test.rs  claude.md  config_test.rs  controller_unit_test.rs  recommendation_engine_test.rs  server_test.rs  status_update_test.rs  webhook_handler_test.rs  webhook_payload_test.rs  webhook_test.rs
crates/kernel-gossip-types/: Cargo.toml  claude.md
crates/kernel-gossip-types/src/: claude.md  kernel_whisper.rs  lib.rs  pod_birth_certificate.rs
crates/kernel-gossip-types/tests/: claude.md
crates/kernel-observer/: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.local
crates/kernel-observer-ebpf-v2/: Cargo.toml
crates/kernel-observer-ebpf-v2/src/: syscall_counter.rs  throttle_detector.rs
crates/kernel-observer/k8s/scripts/: cpu-throttling.bt
crates/kernel-observer/scripts/: container_birth.bt  cpu_throttle.bt  golden_syscalls.bt
crates/kernel-observer/src/: bpftrace.rs  bpftrace_runner.rs  config.rs  ebpf_loader.rs  lib.rs  main.rs  parser.rs  pod_birth_simple.rs  pod_lifecycle_observer.rs  pod_resolver.rs  webhook.rs
docs/: DEMO.md  PIXIE_INTEGRATION.md  REAL_VS_EBPF.md  claude.md
docs/architecture/: claude.md
docs/demo/: claude.md
ebpf-scripts/: cgroup-filtered-syscalls.bt  cpu-throttle-precise.bt  cpu-throttle.bt  pod-lifecycle.bt  pod-specific-syscalls.bt  syscall-counter.bt
k8s/: birth-test.yaml  bpftrace-daemonset.yaml  claude.md  demo-workload.yaml  deploy.sh  kernel-gossip-observer.yaml  kernel-observer-daemonset-simple.yaml  kernel-observer-ebpf-daemonset.yaml  kernel-observer.yaml  namespace.yaml  test-ebpf-permissions.yaml  test-nginx.yaml  test-pods.yaml  workloads.yaml
k8s/configmaps/: bpftrace-scripts.yaml
k8s/crds/: birth-monitor.yaml  claude.md  kernel-whisper.yaml  pod-birth-certificate.yaml
k8s/operator/: claude.md  configmap.yaml  deployment.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/scripts/: container-birth.bt
k8s/test-workloads/: claude.md  cpu-stress.yaml  ddosify-load.yaml  ddosify-nginx.yaml  ddosify-stress.yaml  manual-kernel-whisper.yaml  manual-pod-birth-certificate.yaml  nginx-demo.yaml  nginx-service.yaml  nginx-stress.yaml  nginx-with-birth-cert.yaml
pxl-scripts/: claude.md
pxl-scripts/src/: check_tables.pxl  claude.md  cpu_throttle_detector.pxl  cpu_throttle_live.pxl  inspect_columns.pxl  memory_pressure_monitor.pxl  network_issue_finder.pxl  pod_cpu_stats.pxl  pod_creation_trace.pxl  simple_pod_cpu.pxl  syscall_trace.pxl
pxl-scripts/tests/: claude.md  test_cpu_throttle.py  test_memory_pressure.py  test_network_issue.py  (+2 more)
scripts/: cgroup-filtered-runner.sh  configure-pixie-webhooks.sh  ebpf-runner.sh  test-pixie-integration.sh  trigger-cloud-build.sh
tests/: claude.md
(+2 files in other folders)
