[workspace]
members = [
    "crates/kernel-gossip-types",
    "crates/kernel-gossip-operator",
    "crates/kernel-gossip-e2e",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }