[package]
name = "kernel-gossip-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-gossip-types = { path = "../kernel-gossip-types" }
tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
axum-test = "14.0"
uuid = { version = "1.6", features = ["v4"] }