[package]
name = "kernel-observer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[build-dependencies]
aya-ebpf = "0.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "syscall_counter"
path = "src/syscall_counter.rs"

[[bin]]
name = "throttle_detector"
path = "src/throttle_detector.rs"